# writing-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md
.claude/skills/: README.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md
.specify/workflows/: workflow-registry.json
agents/codex/: README.md
contracts/: README.md  citation-contract.md  citation-record.schema.json  manifest-schema.json  pass-output-schema.md
docs/: README.md  bookwright-contraste.md  citation-contract.md  como-funciona.md  comparativa-bmad.md  comparativa-bookwright-sloop.md  compatibility-matrix.md  contributing.md  editorial-cycle.md  graphify-evaluacion.md  graphify-vs-codegraph.md  inspiracion-bookwright-profundizada.md  installation.md  manifest-schema.md  memory-external.md  parallel-execution.md  portability-validation.md  skill-catalog.md  vivarium-cowork-instructions.md  vivarium-retencion-enganche.md  vivarium.md
docs/maintenance/: constitution-update-procedure.md  skill-update-procedure.md  sync-from-vault.md
graphify-out/: .gitignore
install/: install.sh
install/lib/: common.sh  copy-skills.sh  detect-existing.sh  render-context.sh  render-manifest.sh
mcp/writeonmars-research/: README.md  pyproject.toml  server.py
mcp/writeonmars-research/src/writeonmars_research/: __init__.py  citation.py  server.py  sources.py
paperclip/: FLOW-CONTRACT.md  README.md  hire-team.sh
releases/v1.0.0/: README.md  constitution-v1.1.0.md
resources/: Manual Maestro para la Producción de Textos Especializados: Estrategias de Léxico, Cohesión y Arquitectura Sintáctica.md  guia-IA-writing.md
specs/001-framework-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-wom-cli/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
tools/: dev-bootstrap.sh  new-guide.sh
vivarium/: Cargo.toml  README.md
vivarium/crates/vivarium-cli/: Cargo.toml
vivarium/crates/vivarium-cli/src/: main.rs
vivarium/crates/vivarium-cli/tests/: mode.rs  new.rs  runner.rs
vivarium/crates/vivarium-cli/tests/common/: mod.rs
vivarium/crates/vivarium-cli/tests/stubs/: doc-stub.sh  fail-stub.sh  mesa-stub.sh  redactora-stub.sh  specify
vivarium/crates/vivarium-core/: Cargo.toml
vivarium/crates/vivarium-core/src/: bootstrap.rs  decisions.rs  dispatch.rs  error.rs  lib.rs  manifest.rs  runner.rs  sidecar.rs  state.rs
vivarium/crates/vivarium-core/tests/: sidecar.rs
writeonmars/: AGENTS.md  README.md  preset.yml  smoke-test.sh
(+263 files in other folders)
