[workspace]
members = ["crates/vivarium-core", "crates/vivarium-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
fd-lock = "4.0"
git2 = "0.19"
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.10"
thiserror = "1.0"
toml = "0.8"
