[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writeonmars-research"
version = "0.1.0"
description = "MCP de referencia para investigación editorial bajo el contrato de citación de Write.OnMars."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Write.OnMars maintainers" }
]
keywords = ["mcp", "writing", "citation", "writeonmars"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]

dependencies = [
    "mcp>=0.9.0",
    "jsonschema>=4.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
writeonmars-research = "writeonmars_research.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/writeonmars_research"]

[tool.ruff]
line-length = 100
target-version = "py311"
