[package]
name = "vivarium-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "vivarium"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
vivarium-core = { path = "../vivarium-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
